Optimize Backoffice UI